--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -270,6 +270,8 @@
             <keyboard-shortcut first-keystroke="shift ctrl S" keymap="$default"/>
             <add-to-group group-id="EditorPopupMenu" anchor="last"/>
             <add-to-group group-id="SonarLint.AnalyzeMenu"/>
+            <add-to-group group-id="Vcs.RepositoryChangesBrowserMenu"/>
+            <add-to-group group-id="Vcs.Log.ChangesBrowser.Toolbar"/>
         </action>
 
         <group id="SonarLint.ProjectViewPopupMenu" searchable="false" text="SonarLint" popup="true" icon="SonarLintIcons.SONARLINT_ACTION">
